--- a/package.json
+++ b/package.json
@@ -8,11 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "expo": "~37.0.3",
+    "expo-facebook": "^8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "firebase": "^7.14.1",
+    "random-uuid-v4": "^0.0.9",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-action-button": "^2.8.5",
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-reanimated": "1.2.0",
+    "react-native-screens": "^2.5.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.5.6",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
