Top list doctors added

--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
         "CAMERA_ROLL"
       ]
     },
-    "description": ""
+    "description": "Aplicación creada para el hospital air y proyecto de la materia de Desarrollo de apps moviles.",
+    "githubUrl": "https://github.com/SimonArenas"
   }
 }
