--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-image-picker": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "firebase": "^7.14.1",
+    "firesql": "^2.0.2",
     "random-uuid-v4": "^0.0.9",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
