--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "use-debounce": "^3.4.1",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
